--- a/models/train/npu_level3_scales_backbone_head_leaked.yaml
+++ b/models/train/npu_level3_scales_backbone_head_leaked.yaml
@@ -1,7 +1,7 @@
-# NPU 최적화 Level 3: Backbone + Head + C2PSA 최적화
-# 적용: 3번 (Backbone), 4번 (Head C3k2), 5번 (C2PSA → CSP)
+# NPU 최적화 Level 3: Backbone + Head + C2PSA 최적화 + ReLU 활성화
+# 적용: 3번 (Backbone), 4번 (Head C3k2), 5번 (C2PSA → CSP), SiLU → ReLU
 # Target: Arm Ethos-N NPU
-# Generated: 2025-09-26
+# Updated: 2025-09-30 (활성화 함수 최적화)
 
 # Parameters
 nc: 80 # number of classes (원본 유지)
@@ -13,6 +13,7 @@ scales: # 원본 스케일 유지
   l: [1.00, 1.00, 512] # summary: 357 layers, 25372160 parameters, 25372144 gradients, 87.6 GFLOPs
   x: [1.00, 1.50, 512] # summary: 357 layers, 56966176 parameters, 56966160 gradients, 196.0 GFLOPs
 
+activation: nn.LeakyReLU(0.1) # @aleshem's solution from GitHub #7296 (SiLU → LeakyReLU)
 # NPU 최적화 backbone - C3k2 → C2f, repeat 감소
 backbone:
   # [from, repeats, module, args]
